--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/auth0": "^3.3.10",
     "antd": "^5.22.2",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
