--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/auth0": "^3.3.10",
     "antd": "^5.22.2",
+    "mongodb": "^6.12.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
