--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@sentry/nextjs": "^8.47.0",
     "@types/auth0": "^3.3.10",
     "antd": "^5.22.2",
     "mongodb": "^6.12.0",
