--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@mantine/charts": "^7.15.3",
     "@sentry/nextjs": "^8.47.0",
     "@types/auth0": "^3.3.10",
     "antd": "^5.22.2",
     "mongodb": "^6.12.0",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
