--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
