--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mantine/charts": "^7.15.3",
+    "@mantine/core": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@sentry/nextjs": "^8.47.0",
     "@types/auth0": "^3.3.10",
     "antd": "^5.22.2",
@@ -23,8 +30,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
